fix: scrolltrigger jump

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   cursor: none;
-  
+  overflow-x: hidden;
 }
 
 .cursor {
